--- a/css/oponentes.css
+++ b/css/oponentes.css
@@ -21,9 +21,11 @@ div {
 body {
     background-image: url(../imagens/backgroundoponentes.png);
     background-attachment: fixed;
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     background-color: #000000;
+    width: 100%;
+    height: 100%;
 }
 
 h1 {
@@ -41,6 +43,7 @@ section {
     justify-content: space-around;
     margin: 30px 60px 30px 90px;
     font-size: 30px;
+    height: 100%;
 }
 
 
